--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: "n0tty"
 name: "n0ttytalks"
 keywords: "Key, words, about, this, website"
-baseurl: ""
+baseurl: "/oldblog"
 url: "http://n0tty.github.io"
 description: "n0tty"
 cover: "/assets/img/cover.svg"
